# rjit

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  atomic_helper.c  build.rs
benches/: throughput.rs
src/: extfn.rs  lib.rs  main.rs  mmap.rs  x64asm.rs
