[package]
name = "rjit"
version = "0.1.0"
authors = ["archshift <gh@archshift.com>"]
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[dev-dependencies]                                                                                
criterion = "0.2"                                                                                 
                                                                                                   
[[bench]]                                                                                         
name = "throughput"                                                                               
harness = false
